# memoire-rag

./: .gitignore  pyproject.toml  requirements.in
src/utils/: run_qdrant_container.sh
