[project]
name = "memoire-rag"
version = "0.1.0"
description = "This project is about indexing all my memoires developped during my internships, to allow information retrieval"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.0.8",
    "docx2txt>=0.9",
    "einops>=0.8.1",
    "faker>=37.1.0",
    "flagembedding",
    "huggingface-hub>=0.31.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "llama-cloud>=0.1.21",
    "llama-index>=0.12.35",
    "llama-index-agent-openai>=0.4.7",
    "llama-index-cli>=0.4.1",
    "llama-index-core>=0.12.35",
    "llama-index-embeddings-adapter>=0.3.0",
    "llama-index-embeddings-huggingface>=0.5.3",
    "llama-index-embeddings-openai>=0.3.1",
    "llama-index-experimental>=0.5.5",
    "llama-index-finetuning>=0.3.2",
    "llama-index-indices-managed-llama-cloud>=0.6.11",
    "llama-index-legacy>=0.9.48.post4",
    "llama-index-llms-azure-openai>=0.3.2",
    "llama-index-llms-huggingface-api>=0.4.3",
    "llama-index-llms-mistralai>=0.4.0",
    "llama-index-llms-ollama>=0.5.4",
    "llama-index-llms-openai>=0.3.38",
    "llama-index-multi-modal-llms-openai>=0.4.3",
    "llama-index-node-parser-docling>=0.3.2",
    "llama-index-postprocessor-cohere-rerank>=0.3.0",
    "llama-index-postprocessor-flag-embedding-reranker>=0.3.0",
    "llama-index-program-openai>=0.3.1",
    "llama-index-question-gen-openai>=0.3.0",
    "llama-index-readers-database>=0.4.0",
    "llama-index-readers-docling>=0.3.2",
    "llama-index-readers-file>=0.4.7",
    "llama-index-readers-llama-parse>=0.4.0",
    "llama-index-vector-stores-qdrant>=0.6.0",
    "llama-parse>=0.6.12",
    "matplotlib>=3.10.3",
    "mistralai>=1.7.0",
    "ollama>=0.4.8",
    "openai>=1.78.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "psycopg2-binary>=2.9.10",
    "pyjwt>=2.10.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "sqlalchemy>=2.0.40",
    "tiktoken>=0.9.0",
    "tokenizers>=0.21.1",
    "torch>=2.7.0",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]

[tool.uv.sources]
flagembedding = { git = "https://github.com/FlagOpen/FlagEmbedding.git" }
